Fixed bag of display setting button on Safari.

--- a/style.css
+++ b/style.css
@@ -482,6 +482,7 @@ input[type="number"]::-webkit-inner-spin-button:active {
    width: 140px;
    height: 53px;
    background-color: #F87070;
+   -webkit-appearance: none;
    border: none;
    border-radius: 26.5px;
    font-weight: 700;
